# churn-prediction

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/sample/: sample.csv
models/: churn_pipeline.joblib  feature_meta.json
notebooks/: EDA.ipynb  EDA.md  Modelling.ipynb  Notes.md
src/churn_prediction/: __init__.py  config.py  decision_engine.py  inference.py  pipeline.py  shap_utils.py  train.py
