[project]
name = "churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Devavrat Dhaygude", email = "devavrat.dh@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy<2.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.42.0",
    "streamlit>=1.53.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
